turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:19: error: identifier expected but integer literal found.
var rule:Array[Array[Array[Int]]] = T[U[V[6]]
                                          ^Turmite:105: error: ']' expected but '}' found.
}
^